# drawing_analyzer

./: AGENTS.md  pyproject.toml
drawing_analyzer/: README.md  app.py  hooks.py  pyproject.toml  requirements.txt
drawing_analyzer/drawing_analyzer/: api.py  hooks.py
drawing_analyzer/drawing_analyzer/drawing_analyzer/: hooks.py  modules.txt
